<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.presentation.HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sections_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.016" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sections_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/search"
        android:visibility="gone"
        app:endIconDrawable="@drawable/icv_cancel"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/sections_end_guideline"
        app:layout_constraintStart_toStartOf="@id/sections_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="false"
            android:inputType="text"
            android:lines="1"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/xxs_margin"
        android:fadingEdgeLength="@dimen/default_margin"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        android:scrollbarSize="0dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/sections_end_guideline"
        app:layout_constraintStart_toStartOf="@id/sections_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/search_text_input_layout"
        tools:listitem="@layout/item_recipe" />

    <include
        android:id="@+id/skeleton"
        layout="@layout/layout_recipes_skeleton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sections_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/sections_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/search_text_input_layout" />

    <include
        android:id="@+id/error_layout"
        layout="@layout/layout_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sections_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/sections_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/search_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
